# home-digger

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  rabbitmq.json
app/: pyproject.toml
app/alembic/: env.py
app/homedigger/providers/: register.py
app/homedigger/tests/: test_sanitization.py
app/scripts/: python-image.sh  start-up.sh
collector/: collector.Dockerfile  pyproject.toml
collector/collector/: app.py  config_dev.toml  config_development.toml
collector/collector/auth/: __init__.py
collector/collector/routes/: healthcheck.py  upload.py
collector/collector/tests/: test_auth.py  test_upload.py
collector/collector/tests/fixtures/: __init__.py
collector/collector/tests/mocks/: idealista_real_page.html
dispatcher/: dispatcher.Dockerfile  pyproject.toml
dispatcher/dispatcher/: config_development.toml  main.py
dispatcher/dispatcher/auth/: __init__.py
dispatcher/dispatcher/routes/: dispatcher.py  healthcheck.py
dispatcher/dispatcher/tests/: test_auth.py  test_broker.py
homedigger/core/: scrapper.py
homedigger/core/abstract/: contacts.py  providers.py  sanitization.py  scrapper.py
homedigger/tests/: test_database.py  test_idealista.py  test_providers.py  test_sanitization.py  test_scrapper.py
homedigger/utils/: __init__.py  logging.py
processor/: processor.Dockerfile  pyproject.toml
processor/alembic/: env.py
processor/alembic/versions/: 6652ae9bd669_migration_20231211.py
processor/homedigger/: __init__.py
processor/homedigger/core/abstract/: broker.py  providers.py
processor/homedigger/core/broker/: utils.py
processor/homedigger/core/utils/: cleanup.py
processor/homedigger/providers/common/models/: advertisements.py
processor/homedigger/providers/common/schemas/: base.py
processor/homedigger/providers/idealista/: processor.py
scripts/: build.sh  python-image.sh  sentinel.sh  start-up.sh  watcher.sh
(+20 files in other folders)
