[tool.poetry]
name = "homedigger"
version = "0.1.0"
description = ""
authors = ["Danilo Paes <danilo.paes@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
bs4 = "^0.0.1"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^4.1.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
