[tool.poetry]
name = "homedigger"
version = "0.1.0"
description = ""
authors = ["Danilo Paes <danilo.paes@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
bs4 = "^0.0.1"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
rabbitmq = "^0.2.0"
pika = "^1.3.2"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^4.1.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
